<resources>
    <string name="app_name">MuBanApplication</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="forth">Forth</string>
    <string name="fifth">Fifth</string>
    <string name="hello_first">Hello, First</string>
    <string name="hello_second">Hello, Second</string>
    <string name="hello_third">Hello, Third</string>
    <string name="hello_forth">Hello, Forth</string>
    <string name="hello_fifth">Hello, Fifth</string>
    <string name="info_friends_header">#####A World of Friends</string>
    <string name="info_world_text">#####In their own language.</string>
    <string name="info_speak_text">#####No studying. No waiting.</string>
    <string name="info_friends_text">#####is just a tap away!</string>
    <string name="metal">_Metal</string>
    <string name="stratosphere">_Stratosphere</string>
    <string name="water_resistant_a">_Water resistant 1</string>
    <string name="water_resistant_b">_Water resistant 2</string>
    <string name="desert">_Desert</string>
    <string name="ice">_Ice</string>
    <string name="moonlight">_Moonlight</string>
    <string name="glass">_Glass</string>
    <string name="cubes">_Cubes</string>
</resources>