<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="52dp"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/bar_first"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b7c2bc" />


        <ImageView
            android:id="@+id/iv_first"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:src="@drawable/tab_me_select" />

        <TextView
            android:id="@+id/tv_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/first"
            android:textColor="#2CC8BC"
            android:textSize="11sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bar_second"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b7c2bc" />


        <ImageView
            android:id="@+id/iv_second"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:src="@drawable/tab_me_select" />

        <TextView
            android:id="@+id/tv_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="5dp"
            android:text="@string/second"
            android:textColor="#2CC8BC"
            android:textSize="11sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bar_third"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b7c2bc" />


        <ImageView
            android:id="@+id/iv_third"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:src="@drawable/tab_me_select" />

        <TextView
            android:id="@+id/tv_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="5dp"
            android:text="@string/third"
            android:textColor="#2CC8BC"
            android:textSize="11sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bar_forth"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b7c2bc" />


        <ImageView
            android:id="@+id/iv_forth"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:src="@drawable/tab_me_select" />

        <TextView
            android:id="@+id/tv_forth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="5dp"
            android:text="@string/forth"
            android:textColor="#2CC8BC"
            android:textSize="11sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bar_fifth"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b7c2bc" />


        <ImageView
            android:id="@+id/iv_fifth"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:src="@drawable/tab_me_select" />

        <TextView
            android:id="@+id/tv_fifth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="5dp"
            android:text="@string/fifth"
            android:textColor="#2CC8BC"
            android:textSize="11sp" />

    </LinearLayout>


</LinearLayout>